--- a/data/index.html
+++ b/data/index.html
@@ -10,10 +10,9 @@
     <h2>Endpoints</h2>
     <ul>
         <li><strong>GET /users</strong> - Retrieves a list of users.</li>
-        <li><strong>POST /users</strong> - Creates a new user.</li>
-        <li><strong>GET /users/{id}</strong> - Retrieves a specific user by ID.</li>
-        <li><strong>PATCH /users/{id}</strong> - Updates a user.</li>
-        <li><strong>DELETE /users/{id}</strong> - Deletes a user.</li>
+        <li><strong>POST /users</strong> - Creates a new user. Body: {"name": "John Doe"}</li>
+        <!-- <li><strong>GET /users/{id}</strong> - Retrieves a specific user by ID.</li> -->
+
     </ul>
 </body>
 </html>
