chore: Add/update user-related endpoints and scripts

--- a/data/index.html
+++ b/data/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Documentation</title>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>API Documentation</title>
 </head>
 <body>
-    <h1>API Documentation</h1>
-    <h2>Endpoints</h2>
-    <ul>
-        <li><strong>GET /users</strong> - Retrieves a list of users.</li>
-        <li><strong>POST /users</strong> - Creates a new user. Body: {"name": "John Doe"}</li>
-        <!-- <li><strong>GET /users/{id}</strong> - Retrieves a specific user by ID.</li> -->
-
-    </ul>
+<h1>API Documentation</h1>
+<h2>Endpoints</h2>
+<ul><li>POST /users - Creates a new user. Body: {"name": "John Doe"}</li><li>GET /users - Retrieves a list of users.</li><li>GET /users/{id} - Retrieves a specific user by ID.</li></ul>
 </body>
 </html>
