--- a/data/index.html
+++ b/data/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 <h1>API Documentation</h1>
-<h2>Endpoints</h2>
-<ul><li>POST /users - Creates a new user. Body: {"name": "John Doe"}</li><li>GET /users - Retrieves a list of users.</li><li>GET /users/{id} - Retrieves a specific user by ID.</li></ul>
+<ul><li>POST /users - Creates a new user. Body: {"name": "John Doe", "email": "john.doe@example.com"}</li><li>GET /users - Retrieves a list of users. Body: None</li><li>GET /users/{id} - Retrieves a user by their ID. Body: None</li></ul>
 </body>
 </html>
